fix header line-height for title
if your title is more than one line, words in two line get overlap. this
commit solve this issue.

--- a/data/resources/article_view/style.css
+++ b/data/resources/article_view/style.css
@@ -318,6 +318,7 @@ header.post h1 {
     font-weight: 600;
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
+    line-height: normal
 }
 
 header.post a:link {
